:bug: :ok_hand: fix: fixed dark mode bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,12 +12,6 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #393939;
-    --foreground: #008b48;
-  }
-}
 
 body {
   background: var(--background);
